Fix HTML validity of some help files.

--- a/lang/en_utf8/help/exercise/moreinfo.html
+++ b/lang/en_utf8/help/exercise/moreinfo.html
@@ -10,7 +10,7 @@
     the work and re-submit it or not as the case may be. The final grade is
     based on how well the student assessed their own work and the work itself.</p>
 
-<p>Before the start of the exercise the teacher sets up the exercise by
+<p>Before the start of the exercise the teacher sets up the exercise by</p>
 <ol> <li>Creating a Word document or HTML file which introduces the exercise
     and tells the students what they have to produce. This file is uploaded
     into the exercise by the teacher.</li>
@@ -19,8 +19,7 @@
     Form. This form is used by both the students and the teacher to assess the
     work produced in the exercise. There are various types of assessment
     which can be used (see the help on &quot;Grading Strategy&quot;)</li>
-</ol></p>
-
+</ol>
 <p>In large classes, the teacher may find to helpful to create more than one version
     of the exercise. These variants add a degree of variety to the exercise and
     ensure that students are doing different tasks in the exercise. They
