--- a/lang/en_utf8/help/exercise/regrading.html
+++ b/lang/en_utf8/help/exercise/regrading.html
@@ -13,12 +13,12 @@
     the grades. Or alternatively if the grades are too low, setting the option
     to &quot; Lax&quot; or &quot;Very Lax&quot; will increase the grades.</p>
 
-<p>If a change to the Grading grades is required the steps are:
+<p>If a change to the Grading grades is required the steps are:</p>
     <ol>
     <li>Update the Exercise with the new value of the Comparison of Assessments
     option;</li>
     <li>Go to the Exercise's Administration page and click on the
     &quot;Re-grade Student Assessments&quot; link.</li>
     </ol>
-    The new grades will be displayed. These process can be safely repeated.</p>
+<p>The new grades will be displayed. These process can be safely repeated.</p>
 
