--- a/lang/en_utf8/help/roles.html
+++ b/lang/en_utf8/help/roles.html
@@ -17,11 +17,11 @@ that user those capabilities just in that forum.
   
 <p>
 A role must have a <strong>name</strong>.  If you need to name the role for multiple 
-languages you can use multilang syntax if you wish, such as <pre>
+languages you can use multilang syntax if you wish, such as</p><pre>
   &lt;span lang="en"&gt;Teacher&lt;/span&gt; 
   &lt;span lang="es_es"&gt;Profesor&lt;/span&gt; 
-  </pre>If you do this make sure the setting to "filter strings" is on for your installation.
-</p>
+  </pre>
+<p>If you do this make sure the setting to "filter strings" is on for your installation.</p>
 
 <p>
 The <strong>shortname</strong> is necessary for other plugins in Moodle that may need
