--- a/lang/en_utf8/help/sitefilesused.html
+++ b/lang/en_utf8/help/sitefilesused.html
@@ -4,6 +4,7 @@
 This option allows you to choose whether to back up files used in a course from the site files area.
 </p>
 <p>
-Currently the only files that are detected as used in a course are :
-<ul><li><strong>files linked to from questions in the question bank.</strong> All files in the site files area that are linked to in a question that is backed up are also backed up if you select 'yes' for this option.</li></ul>
-</p>
+Currently the only files that are detected as used in a course are:</p>
+<ul>
+    <li><strong>files linked to from questions in the question bank.</strong> All files in the site files area that are linked to in a question that is backed up are also backed up if you select 'yes' for this option.</li>
+</ul>
