--- a/lang/en_utf8/help/teachers.html
+++ b/lang/en_utf8/help/teachers.html
@@ -27,13 +27,13 @@
    
 <p>You can also choose whether a teacher should have editing rights
    on the course. Non-editing teachers could be thought of as course
-   tutors. They are:
+   tutors. They are:</p>
    <ol>
      <li>not able to change the structure of the course</li>
      <li>not able to enroll or unenroll students
      <li>able to grade</li>
      <li>able to facilitate within activities</li>
    </ol>
-   When assigned to a group, they are only able to perform 
+<p>When assigned to a group, they are only able to perform 
    task 3 and 4 with that group.
 </p>
