--- a/lang/en_utf8/help/textformat.html
+++ b/lang/en_utf8/help/textformat.html
@@ -7,6 +7,7 @@
 <p><b>Usually you can just leave this setting to the default value and things 
       should work as you expect</b>.</p>
 
+
 <h2>1. Moodle auto-format</h2>
 
 <div class="indent">
@@ -23,7 +24,7 @@
 <p>Smiley characters such as :-) will automatically become their graphical equivalents.</p>
 <p>You can even embed HTML code if you want to and it will be retained.</p>
 <p class="moreinfo"><a href="help.php?file=text2.html">More info about Moodle auto-formatting</a></p>
-</ul>
+</div>
 
 
 <h2>2. HTML format</h2>
