Fix HTML validity of some help files.

--- a/lang/en_utf8/help/enrol/imsenterprise/unenrol.html
+++ b/lang/en_utf8/help/enrol/imsenterprise/unenrol.html
@@ -12,7 +12,7 @@
 <p>The third method is slightly different. It does not require this config setting to be activated, and can be specified well in advance of the unenrolment date:</p>
 
 <ul>
-  <li>A &lt;member> element which specifies a &lt;timeframe> for the enrolment can specify the begin and/or end dates for enrolment of this particular student. These dates are loaded into Moodle's enrolment data table if present, and so after the end-date, a student will no longer be able to access that particular course.</li>
+  <li>A &lt;member&gt; element which specifies a &lt;timeframe&gt; for the enrolment can specify the begin and/or end dates for enrolment of this particular student. These dates are loaded into Moodle's enrolment data table if present, and so after the end-date, a student will no longer be able to access that particular course.</li>
 </ul>
 
 
