--- a/lang/en_utf8/help/feedback/mods.html
+++ b/lang/en_utf8/help/feedback/mods.html
@@ -1,8 +1,5 @@
-<img alt valign="middle" src="<?php echo $CFG->wwwroot?>/mod/feedback/icon.gif">&nbsp;<b><?php print_string('modulename', 'feedback');?></b>
+<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/feedback/icon.gif" />&nbsp;<b>Feedbacks</b>
 
-<ul>
-<p>
+<div class="indent">
 This module allows you to create custom surveys with your own questions.
-</p>
-</ul>
-
+</div>
