--- a/lang/en_utf8/help/feedback/preview.html
+++ b/lang/en_utf8/help/feedback/preview.html
@@ -1,11 +1,6 @@
-TRANSLATORS:  DO NOT TRANSLATE YET, THESE NEED REVIEW
+<h2>Preview</h2>
 
-<img alt valign="middle" src="<?php echo $CFG->wwwroot?>/mod/feedback/icon.gif">
-   &nbsp;<b><?php print_string('preview', 'feedback');?></b>
-
-<ul>
 <p>
 In the preview you can change the position order of questions.
 </p>
-</ul>
 
