--- a/lang/en_utf8/help/grade/exceptions.html
+++ b/lang/en_utf8/help/grade/exceptions.html
@@ -1,16 +1,17 @@
 <h1>Exceptions</h1>
+
 <p>This can be used to exclude students from individual assignments. This is useful if two class 
 sections merge or a student transfers from a different section several weeks into a semester. 
-It is also useful for extenuating circumstances: sickness, injury, etc.
-<br />
-There are three columns:</p>
+It is also useful for extenuating circumstances: sickness, injury, etc.</p>
+
+<p>There are three columns:</p>
 <ul>
     <li>Left: Is students for the course that are "Included in Grading" for an particular graded 
         item.</li>
     <li>Middle: A listing of all graded items followed by a total number of students excluded 
         from grading in parenthesis.</li>
     <li>Right: A list of students that are excluded from a particular assignment</li>
-<ul>
+</ul>
 
 <p>To exclude students click the assignment in the middle and then click the students name in the left
 column (holding down CTRL or APPLE will allow selection of multiple items). Then click 
