Fix HTML validity of some help files.

--- a/lang/en_utf8/help/html.html
+++ b/lang/en_utf8/help/html.html
@@ -10,8 +10,8 @@
    so:</p>
 
    <ul>
-   <li>there is no need to use any &lt;HEAD> or &lt;BODY> tags
-   <li>be careful about unmatched &lt;/TABLE> tags that may mess up the display.
+   <li>there is no need to use any &lt;HEAD&gt; or &lt;BODY&gt; tags
+   <li>be careful about unmatched &lt;/TABLE&gt; tags that may mess up the display.
    </ul>
 
 <p>Smilies (emoticons) will be converted into their graphical equivalent, and 
