--- a/lang/en_utf8/help/markdown.html
+++ b/lang/en_utf8/help/markdown.html
@@ -24,15 +24,15 @@
 
 <p>You can add three levels of emphasis with Markdown, <em>italic</em> text, <strong>bold</strong> text, or <strong><em>bold and italic</em></strong> text. This is achieved by surrounding the text you wish to emphasise with asterisks e.g.</p>
 
-<p><strong><code>*italic*</code></strong> -> <em>italic</em> <br />
-<strong><code>**bold**</code></strong> -> <strong>bold</strong> <br />
-<strong><code>***bold italic***</code></strong> -> <strong><em>bold italic</em></strong></p>
+<p><strong><code>*italic*</code></strong> -&gt; <em>italic</em> <br />
+<strong><code>**bold**</code></strong> -&gt; <strong>bold</strong> <br />
+<strong><code>***bold italic***</code></strong> -&gt; <strong><em>bold italic</em></strong></p>
 
 <p>Emphasis can be added to single words, a sequence of words, or even parts of words:</p>
 
-<p><strong><code>a *single* word</code></strong> -> a <em>single</em> word <br />
-<strong><code>***a sequence of words***</code></strong> -> <strong><em>a sequence of words</em></strong> <br />
-<strong><code>in**distinguish**able</code></strong> -> in<strong>distinguish</strong>able</p>
+<p><strong><code>a *single* word</code></strong> -&gt; a <em>single</em> word <br />
+<strong><code>***a sequence of words***</code></strong> -&gt; <strong><em>a sequence of words</em></strong> <br />
+<strong><code>in**distinguish**able</code></strong> -&gt; in<strong>distinguish</strong>able</p>
 
 <p>Underscores (_) can be used interchangeably with asterisks for this purpose.</p>
 
@@ -123,7 +123,7 @@ etc.</p>
 
 <h2><a id="quotes">quoted paragraphs</a></h2>
 
-<p>You can indicate a quoted section of text by beginning each line with an angle bracket (>). This character was chosen as many email programs use it to indicate quoted sections. The output will generally indent the quoted section in from both margins.</p>
+<p>You can indicate a quoted section of text by beginning each line with an angle bracket (&gt;). This character was chosen as many email programs use it to indicate quoted sections. The output will generally indent the quoted section in from both margins.</p>
 
 <p><strong><code>&gt; This is a quoted paragraph</code> <br />
 <code>&gt; spread over two lines</code></strong>  </p>
