--- a/lang/en_utf8/help/richtext2.html
+++ b/lang/en_utf8/help/richtext2.html
@@ -45,4 +45,4 @@
 <p>To embed these small icons in your text, click on the smiley icon in the toolbar.  A dialog will pop up that allows you to select from the following smiley icons. (Alternatively, you can just type the corresponding code straight into your text and it will be converted later when your text is displayed).</p>
 <div id="emoticons">##emoticons_html##</div>
 </div>
-<div style="clear:both">&nbsp;<div>
+<div style="clear:both">&nbsp;</div>
