--- a/lang/en_utf8/help/langedit.html
+++ b/lang/en_utf8/help/langedit.html
@@ -3,7 +3,7 @@
 <p>To edit languages on this page the files need to be writable 
    by the web server process.</p>
 
-<p>Within some of the strings you will notice <b>$a</b> and <b>$a->something</b>.</p>
+<p>Within some of the strings you will notice <b>$a</b> and <b>$a-&gt;something</b>.</p>
 
 <p>These represent variables that will be replaced by names or other words from 
    within Moodle.</p>  
