Fix HTML validity of some help files.

--- a/lang/en_utf8/help/quiz/calculated.html
+++ b/lang/en_utf8/help/quiz/calculated.html
@@ -8,7 +8,7 @@
 <tr valign="top">
     <th scope="col" align="right">Question:</th>
     <td>
-        <textarea id="questiontext" name="questiontext" rows="5" cols="40" wrap="virtual">How much is {a} + {b} ?</textarea>
+        <textarea id="questiontext" name="questiontext" rows="5" cols="40">How much is {a} + {b} ?</textarea>
 </td>
 </tr>
 <tr valign="top">
