--- a/lang/en_utf8/help/wiki/howtowiki.html
+++ b/lang/en_utf8/help/wiki/howtowiki.html
@@ -12,8 +12,6 @@ which is an implementation of the
 
 hypertext system. It allows simple collaborative editing and creation of web pages.</p>
 
-<p>
-
 <ul>
 
 <li>learn how to <a href="#createpages">CreatePages</a></li>
@@ -28,13 +26,9 @@ hypertext system. It allows simple collaborative editing and creation of web pag
 
 </ul>
 
-</p>
-
-<p>
-
 <h3 id="createpages">Create Pages:</h3>
 
-You create a page by naming it in the text of an existing page. A wiki page is named using
+<p>You create a page by naming it in the text of an existing page. A wiki page is named using
 
 <a href="#camelcase">CamelCase</a> or by enclosing it in square brackets ( [] ).</p>
 
@@ -58,7 +52,7 @@ enter edit mode for that page. Enter your text, save and you have a new wiki pag
 
 <h3 id="wikimarkup">Wiki Markup:</h3>
 
-If you are using the WYSIWYG HTML editor with ordinary word-processor style controls, then you 
+<p>If you are using the WYSIWYG HTML editor with ordinary word-processor style controls, then you 
 should use those controls to format your entry. Otherwise (when the edit box is just a normal 
 text box with no special controls) you can use the following wiki markup. 
 <b>These features do not apply when using the WYSIWYG editor</b>.   
