--- a/lang/en_utf8/help/workshop/assignmenttype.html
+++ b/lang/en_utf8/help/workshop/assignmenttype.html
@@ -1,6 +1,6 @@
 <h1>Peer Graded Assignment Type</h1>
 
-<p>A peer graded assignment can have one of two types:
+<p>A peer graded assignment can have one of two types:</p>
 
 <ol>
 <li>Only feedback on the assessment elements and the general comment
@@ -17,4 +17,3 @@
     peers' grade and the student's grading performance.</li>
 
 </ol>
-</p>
