--- a/lang/en_utf8/help/workshop/calculatingfinalgrade.html
+++ b/lang/en_utf8/help/workshop/calculatingfinalgrade.html
@@ -29,8 +29,8 @@
     the students gives high marks for good pieces of work and low marks for poor
     pieces of work their reliability will be high. If it is suspected that the students in
     general are poor assessors then the teacher's grades should be included into
-    the peer averages, this should make the reliability values more meaningful.
-<li>The average grade given by the teacher for the student's assessments.</li>
+    the peer averages, this should make the reliability values more meaningful.</li>
+<li>The average grade given by the teacher for the student's assessments.
     This includes both the preliminary assessments made by the student on the
     example pieces of work and any grading the teacher makes on the assessments
     produced during the peer assessment phase of the assignment. In general this
