--- a/lang/en_utf8/help/workshop/elements.html
+++ b/lang/en_utf8/help/workshop/elements.html
@@ -15,7 +15,7 @@
     strategies, there is also an area for general comments.</p>
 
 
-<p><b>Accumulative Grading.</b> The elements have the following three features:
+<p><b>Accumulative Grading.</b> The elements have the following three features:</p>
 <ol>
 <li>The DESCRIPTION of the assessment element. This should clearly state what
     aspect of the assignment is being assessed. If the assessment is qualitative
@@ -38,7 +38,6 @@
     of the peer assignment. Weights can be assigned negative values, this is an
     experimental feature.</li>
 </ol>
-</p>
 
 <p><b>Error Banded Grading.</b> The elements will normally describe certain items
     or aspects which must be present in the assignment. The assessment is made on the
