--- a/lang/en_utf8/help/workshop/finalgrades.html
+++ b/lang/en_utf8/help/workshop/finalgrades.html
@@ -2,7 +2,7 @@
 
 <p>The table on this screen lists the final grades and their breakdown as shown to
     the students. If there are missing values in the table then it is possible to &quot;go back&quot;
-    and add these. In fact, there are two adjustments which can be made to the Final Grades.
+    and add these. In fact, there are two adjustments which can be made to the Final Grades.</p>
 
 <ol>
 <li>If a teacher's grade needs to be added then the piece of work can be
@@ -17,5 +17,3 @@
     weights entered. After the grades have been re-calculated the assignment should be moved
     to Phase 4 to make the new grades available.</li>
 </ol>
-
-</p>
