--- a/lang/en_utf8/help/workshop/ungradedassessments.html
+++ b/lang/en_utf8/help/workshop/ungradedassessments.html
@@ -16,12 +16,12 @@
     
 <p>The function of this link is to force a re-calculation of the grading grades, 
     the grades given to assessments. The teacher may want to do this when either
-    of these two options is changed:
+    of these two options is changed:</p>
 <ol>
     <li>The option &quot;Comparison of Assessments&quot;;</li>
     <li>The weighting given to the teacher's assessments.</li> 
 </ol>
-    Clicking on this link will immediately bring the grading grades up-to-date,
+    <p>Clicking on this link will immediately bring the grading grades up-to-date,
     reflecting the current values given to these parameters. Changes to other 
     the settings of the workshop, such as the value for the grading grade 
     itself, do <b>not</b> require this re-calculation to be performed.</p>
