--- a/lang/en_utf8/help/question/categories.html
+++ b/lang/en_utf8/help/question/categories.html
@@ -3,28 +3,30 @@
 <p>Rather than keeping all your questions in one big list,
    you can create categories to keep them in.</p>
 
-<p>Categories can be created or deleted at will. But :
+<p>Categories can be created or deleted at will. But:</p>
 <ul><li> There must be at least one category in each context. So you
 cannot delete the last category in a context.</li>
 <li>When you try to delete a category containing
    questions, then you will be asked to specify another
-   category to move them to.</li></ul></p>
+   category to move them to.</li></ul>
 
 <p>You can arrange your categories in a hierarchy so
    that they are easier to manage. Editing categories is done under the 'Categories'
    tab in the question bank.</p>
 
-   <ul><li>On the main page under the 'Categories' tab in the question bank :
-   <ul><li>the up and down
-   arrow keys change the order in
-   which categories which are peers of each other are listed.</li>
-   <li>Under the 'Categories' tab in the question bank, you can also move a category
-   to a new context with the up / down arrows.</li>
-   <li>The left and right arrows are used to
-   change the parent category of a category.</li></ul></li>
+<ul>
+   <li>On the main page under the 'Categories' tab in the question bank :
+   <ul>
+      <li>the up and down arrow keys change the order in which categories which
+          are peers of each other are listed.</li>
+      <li>Under the 'Categories' tab in the question bank, you can also move a category
+          to a new context with the up / down arrows.</li>
+      <li>The left and right arrows are used to change the parent category of a category.</li>
+   </ul></li>
    <li>A possibly quicker way to move categories is to click on the edit
-   icon in the 'Categories' tab in the question bank and then use the category
-        select box to select a new parent category.</li></ul></p>
+       icon in the 'Categories' tab in the question bank and then use the category
+       select box to select a new parent category.</li>
+</ul>
 
 
 <p>See also :</p>
