--- a/lang/en_utf8/help/workshop/gradingstrategy.html
+++ b/lang/en_utf8/help/workshop/gradingstrategy.html
@@ -1,6 +1,6 @@
 <h1>Grading Strategy</h1>
 
-<p>A workshop assignment is quite flexible in the type of grading scheme used. This can be:
+<p>A workshop assignment is quite flexible in the type of grading scheme used. This can be:</p>
 
 <ol>
 <li><b>No grading:</b> In this type of assignment the teacher is not
@@ -75,5 +75,3 @@
     weights and the grade is a weighted combination of the scores from each set. There
     is <b>no</b> adjustment option in this assessment type. </li>
 </ol>
-
-</p>
