MDL-16654 Move javascript used by the emoticons help file from javascript.php to javascript-static.js. Fix it so that it actually works.

--- a/lang/en_utf8/help/emoticons.html
+++ b/lang/en_utf8/help/emoticons.html
@@ -1,5 +1,10 @@
 <h1>Using Smilies (emoticons)</h1>
 
+<!-- Note, this file is no loger used in HEAD, it has been replaced by emoticons2.html
+which uses a dynamically buils list of smilies. The purpose of this note is to
+point out that it is not a problem that none fo the href="javascript:inserttext('...')"
+links work any more in HEAD. See MDL-16654. -->
+
 <table align="center" border="1">
   <tbody><tr valign="top">
     <td>
