Protect message settings with sesskey. MDL-16688 ; backported from 18_STABLE

--- a/message/settings.html
+++ b/message/settings.html
@@ -1,5 +1,6 @@
 <form name="message_settings" action="index.php" method="post">
 <input type="hidden" name="tab" value="settings" />
+<input type="hidden" name="sesskey" value="<?php echo sesskey() ?>" />
 
 
 <table cellpadding="5" align="center" class="message_form">
