--- a/lang/en_utf8/help/rolerenaming.html
+++ b/lang/en_utf8/help/rolerenaming.html
@@ -7,3 +7,5 @@ This option allows you to change the displayed names for roles used in your cour
 <p>
 These new role names will appear on the course participants page and elsewhere within the course. If the renamed role is one that the Administrator has selected as a course manager role, then the new role name will also appear as part of the course listings.
 </p>
+
+<p>New role names are only included in a course backup if users are also included.</p>
