--- a/lang/en_utf8/help/coursegrades.html
+++ b/lang/en_utf8/help/coursegrades.html
@@ -2,13 +2,15 @@
 
 <p>Many of the activities allow grades to be set.</p>
 
-<p>By default, the results of all grades within the 
-   course can be seen in the Grades page, available 
+<p>By default, the results of all grades within the
+   course can be seen in the Grades page, available
    from the main course page.</p>
 
-<p>If a teacher is not interested in using grades in a 
-   course, or just wants to hide grades from students, 
-   then they can disable the display of grades in the 
-   Course Settings.  This does not prevent individual 
-   activities from using or setting grades, it just 
-   disables the results being displayed to students.</p>
+<p>If a teacher is not interested in using grades in a
+   course, or just wants to hide the gradebook from students,
+   then they can disable the display of the gradebook in
+   the Course Settings.  This does not prevent individual
+   activities from using or setting grades,
+   <strong>nor</strong> does it prevent the grade from being
+   displayed to students within the individual activities.</p>
+
