--- a/backup/restore_form.html
+++ b/backup/restore_form.html
@@ -601,8 +601,7 @@ $xml_file  = $CFG->dataroot."/temp/backup/".$backup_unique_code."/moodle.xml";
 $info = restore_read_xml_info($xml_file);
 
 // fix for MDL-9068, front page course is just a normal course
-$siterolesarray = get_assignable_roles (get_context_instance(CONTEXT_COURSE, $course->id), "shortname", ROLENAME_ORIGINAL);
-$siterolesnamearray = get_assignable_roles (get_context_instance(CONTEXT_COURSE, $course->id), "name", ROLENAME_ORIGINAL);
+$siterolesarray = get_assignable_roles(get_context_instance(CONTEXT_COURSE, $course->id), ROLENAME_ORIGINALANDSHORT);
 $allroles = $DB->get_records('role');
 
 echo ('<table width="100%" class="restore-form-instances">');
@@ -654,13 +653,9 @@ if ($info->backup_moodle_version < 2006092801) {
     $roles = restore_read_xml_roles($xml_file);
 
     if (!empty($roles->roles)) { // possible to have course with no roles
-        foreach ($siterolesarray as $siteroleid=>$siteroleshortname) {
-            $siteroleschoicearray[$siteroleid] = $siterolesnamearray[$siteroleid]." (". $siterolesarray[$siteroleid].")";
-        }
-
         foreach ($roles->roles as $roleid=>$role) {
 
-            $mappableroles = $siteroleschoicearray;
+            $mappableroles = $siterolesarray;
 
             echo ('<tr><td align="right">');
             echo '<label for="menuroles_'.$roleid.'">'.format_string($role->name)." (".($role->shortname).")".'</label>';
@@ -678,8 +673,8 @@ if ($info->backup_moodle_version < 2006092801) {
                 // no exact role found, let's try to match shortname
                 // this is useful in situations where basic roles differ slightly in definition
                 $matchrole = 0;
-                foreach ($siterolesarray as $siteroleid=>$siteroleshortname) {
-                    if ($siteroleshortname == $role->shortname) {
+                foreach ($siterolesarray as $siteroleid => $notused) {
+                    if ($siteroleshortname == $allroles[$siteroleid]->shortname) {
                         $matchrole = $siteroleid;
                         break;
                     }
