MDL-13702 example replaced with simpler one

--- a/lang/en_utf8/help/grade/importoutcomes.html
+++ b/lang/en_utf8/help/grade/importoutcomes.html
@@ -10,7 +10,6 @@
     <tr> <td class="cell">scale_description</td><td class="cell">The description of the scale </td> <td class="cell">No</td> <td class="cell">String</td> </tr>
 </table>
 
-<p>Here is a sample:</p>
+<p>Here is an example:</p>
 <pre>outcome_name;outcome_shortname;outcome_description;scale_name;scale_items;scale_description
-Assiduity outcome;assiduity;;Assiduity scale;"Absent,Half-way there,Assiduous,Omnipresent";</pre>
-
+Participation;participation;;Participation scale;"Little or no participation, Satisfactory participation, Full participation";</pre>
