role overrides: MDL-17070 Improve override roles page to match the recent usability improvements on the assign page.
Including:
MDL-11529 When assigning/overriding roles, the dropdown for switching to another role should have a number in brackets

MDL-16549 Should not be able to edit the permission associated with moodle/site:doanything on any role.

--- a/admin/roles/manage.html
+++ b/admin/roles/manage.html
@@ -126,7 +126,7 @@ if (!empty($role->legacytype)) {
 foreach ($capabilities as $capability) {
 
     //legacy caps have their own selector
-    if (islegacy($capability->name)) {
+    if (is_legacy($capability->name)) {
         continue;
     }
 
