--- a/lang/en_utf8/help/qtype_multianswer/multianswer.html
+++ b/lang/en_utf8/help/qtype_multianswer/multianswer.html
@@ -18,14 +18,16 @@ importing them from external files.</p>
 
 <p>Here is an example of the input text used to specify such a question:</p>
 
+<p>Note that for multiple choice vertical or horizontal rendering there is no automatic numbering. It can added at each answer as shown here.</p>
+
 <p><textarea rows="25" wrap="virtual" cols="60">This question consists of some text with an answer embedded right here {1:MULTICHOICE:Wrong answer#Feedback for this wrong answer~Another wrong answer#Feedback for the other wrong answer~=Correct answer#Feedback for correct answer~%50%Answer that gives half the credit#Feedback for half credit answer} and right after that you will have to deal with this short answer {1:SHORTANSWER:Wrong answer#Feedback for this wrong answer~=Correct answer#Feedback for correct answer~%50%Answer that gives half the credit#Feedback for half credit answer} and finally we have a floating point number {2:NUMERICAL:=23.8:0.1#Feedback for correct answer 23.8~%50%23.8:2#Feedback for half credit answer in the nearby region of the correct answer}.&lt;br /&gt;
 &lt;br /&gt;
 The  multichoice question can also be shown in the vertical display of the standard moodle multiple choice.&lt;br /&gt;
 &lt;br /&gt;
-{2:MCV:Wrong answer#Feedback for this wrong answer~Another wrong answer#Feedback for the other wrong answer~=Correct answer#Feedback for correct answer~%50%Answer that gives half the credit#Feedback for half credit answer}&lt;br /&gt;
+{2:MCV:1. Wrong answer#Feedback for this wrong answer~2. Another wrong answer#Feedback for the other wrong answer~=3. Correct answer#Feedback for correct answer~%50%4. Answer that gives half the credit#Feedback for half credit answer}&lt;br /&gt;
 Or in an horizontal display that is included here in a table&lt;br /&gt;
 &lt;br /&gt; 
-{2:MCH:Wrong answer#Feedback for this wrong answer~Another wrong answer#Feedback for the other wrong answer~=Correct answer#Feedback for correct answer~%50%Answer that gives half the credit#Feedback for half credit answer}&lt;br /&gt;
+{2:MCH:a. Wrong answer#Feedback for this wrong answer~b. Another wrong answer#Feedback for the other wrong answer~=c. Correct answer#Feedback for correct answer~%50%d. Answer that gives half the credit#Feedback for half credit answer}&lt;br /&gt;
 Note that addresses like www.moodle.org and smileys :-) all work as normal:&lt;br /&gt;
  a) How good is this? {:MULTICHOICE:=Yes#Correct~No#We have a different opinion}&lt;br /&gt;
  b) What grade would you give it? {3:NUMERICAL:=3:2}&lt;br /&gt;
@@ -53,7 +55,7 @@ Good luck!
               </td>
               <td class="c1 text ">
                 <label for="resp3796_8960">
-                  <span class="anun">1<span class="anumsep">.</span></span> Wrong answer
+                  1. Wrong answer
                 </label>
               </td>
               <td class="c0 feedback">
@@ -65,7 +67,7 @@ Good luck!
               </td>
               <td class="c1 text ">
                 <label for="resp3796_8961">
-                  <span class="anun">2<span class="anumsep">.</span></span> Another wrong answer
+                  2. Another wrong answer
                 </label>
               </td>
               <td class="c0 feedback">
@@ -77,7 +79,7 @@ Good luck!
               </td>
               <td class="c1 text ">
                 <label for="resp3796_8962">
-                  <span class="anun">3<span class="anumsep">.</span></span> Correct answer
+                  3. Correct answer
                 </label>
               </td>
               <td class="c0 feedback">
@@ -89,7 +91,7 @@ Good luck!
               </td>
               <td class="c1 text ">
                 <label for="resp3796_8963">
-                  <span class="anun">4<span class="anumsep">.</span></span> Answer that gives half the credit
+                  4. Answer that gives half the credit
                 </label>
               </td>
               <td class="c0 feedback">
@@ -105,7 +107,7 @@ Good luck!
             </td>
             <td class="c1 text ">
               <label for="resp3796_8964">
-                <span class="anun">1<span class="anumsep">.</span></span> Wrong answer
+                a. Wrong answer
               </label>
             </td>
             <td class="c0 feedback">
@@ -115,7 +117,7 @@ Good luck!
             </td>
             <td class="c1 text ">
               <label for="resp3796_8965">
-                <span class="anun">2<span class="anumsep">.</span></span> Another wrong answer
+                b. Another wrong answer
               </label>
             </td>
             <td class="c0 feedback">
@@ -125,7 +127,7 @@ Good luck!
             </td>
             <td class="c1 text ">
               <label for="resp3796_8966">
-                <span class="anun">3<span class="anumsep">.</span></span> Correct answer
+                c. Correct answer
               </label>
             </td>
             <td class="c0 feedback">
@@ -135,7 +137,7 @@ Good luck!
             </td>
             <td class="c1 text ">
               <label for="resp3796_8967">
-                <span class="anun">4<span class="anumsep">.</span></span> Answer that gives half the credit
+                d. Answer that gives half the credit
               </label>
             </td>
             <td class="c0 feedback">
