cleanup: MDL-17083 Remove the old teacher, teachers, student and students columns from the course table.
For something that has been deprecated for over two years, they were still used in a lot of places!

--- a/backup/backup_form.html
+++ b/backup/backup_form.html
@@ -332,7 +332,7 @@ function selectItemInCheckboxByName(formId, checkName, checked ) {
         echo "<td align=\"right\" valign=\"top\" colspan=\"2\"><b>";
         echo get_string("backuproleassignments");
         echo "</b></td><td colspan=\"2\">";
-        $roles = $DB->get_records('role', null, 'sortorder');
+        $roles = get_all_roles();
         foreach ($roles as $role) {
             print_checkbox('backupassignments_' . $role->shortname, 1, true, strip_tags(format_string($role->name, true)));
             echo "<br />";
