--- a/user/edit.html
+++ b/user/edit.html
@@ -251,6 +251,12 @@ if (isadmin()) {
     </td>
 </tr>
 <?php } ?>
+<?php
+$can_edit_user = isadmin();
+if (empty($user->description) && !empty($CFG->profilesforenrolledusersonly) && !record_exists('user_students', 'userid', $userid)&& !record_exists('user_teachers', 'userid', $userid)  && !$can_edit_user) {
+    // prevent user editing description
+} else {
+?>
 <tr>
     <th><?php print_string("userdescription") ?>:</th>
     <td><?php
@@ -263,6 +269,9 @@ if (isadmin()) {
     ?>
     </td>
 </tr>
+<?php
+}
+?>
 <tr>
     <td colspan="2" style="text-align: center;"><input type="submit" value="<?php print_string("updatemyprofile") ?>" /></td>
 </tr>
