quiz editing: MDL-17289 copy-edit editconcepts.html

--- a/lang/en_utf8/help/quiz/editconcepts.html
+++ b/lang/en_utf8/help/quiz/editconcepts.html
@@ -1,25 +1,33 @@
-<h1>Basic ideas of making quizzes</h1>
-<p>The main concepts while managing quiz content (questions) are:</p>
+<h1>The basic ideas of quiz-making</h1>
+
+<p>The main concepts you need to understand while creating quizzes and the
+questions they contain are:</p>
 <ul>
-    <li>Quiz and pages</li>
-    <li>Question bank and its categories</li>
-    <li>Random question</li>
+    <li>The quiz, divided into pages</li>
+    <li>The question bank, which stores all the questions organised into categories</li>
+    <li>Random questions</li>
 </ul>
-<p>You can think of a <strong>quiz</strong>, in essence, to be like a
-traditional pen&amp;paper quiz (or an exam/test). It contains questions.
-You can divide the questions in a quiz on several <strong>pages</strong>
-or you can keep them all on one page.
-With Moodle Quiz, you can also give the grading beforehand for the
-questions in a quiz (as well as the total for the entire quiz).</p>
-<p>When you create questions, they are stored in the <strong>Question
-Bank</strong>. In the Question Bank you can create categories, which are similar
-to folders. You can use them to create a hierarchy for organizing
-questions, for example, by topic. When you create a question into
-an exam, a copy of it is stored in the Question Bank. If you decide to
-remove your question from an exam, it will still be intact in the
-question bank until you delete it from there, too.</p>
-<p>You can use <strong>Random Questions</strong>, if you want a question to
-vary between different attempts students make at the quiz (for example,
-to avoid cheating by means of students copying questions to each other).
-Just create a random question in the quiz and add questions in the
-category of the random question.</p>
+
+<p>You can think of a <strong>quiz</strong> as being like
+traditional pen-and-paper quiz (or exam or test). It contains questions.
+You can arrange the questions in a quiz into several <strong>pages</strong>
+or you can keep them all on one page. As you create the questions, and add them
+to the quiz, you also set up the rules for how the questions are graded
+(or marked). This is like the mark-scheme for a traditional quiz.</p>
+
+<p>When you create questions, they are stored in the <strong>question
+bank</strong>. In the question bank you can create <strong>categories</strong>,
+which are similar to folders on your hard disc. You can use them to create a
+hierarchy for organising your questions, for example, by topic. Even if you
+create and add a question directly into the quiz, it is automatically stored in
+the question bank too. If you later remove your question from the quiz, will
+remain in the question bank, unless you also go and delete it from there. As you
+construct your quiz, you can take any  of the questions that are already in the
+question bank, and add them to your quiz.</p>
+
+<p>You can use <strong>random questions</strong> so that different students get
+different questions, or so that one student gets different questions each time
+they attempt the quiz. For example, this can reduce cheating by making it harder
+for students to copy from each other. When a student starts an attempt at the
+quiz, the random question will be replaced by an actual question, picked at
+random from a certain category in the question bank.</p>
