quiz editing: MDL-17284 shortened the basic ideas of quiz-making

--- a/lang/en_utf8/help/quiz/editconcepts.html
+++ b/lang/en_utf8/help/quiz/editconcepts.html
@@ -12,19 +12,15 @@ questions they contain are:</p>
 traditional pen-and-paper quiz (or exam or test). It contains questions.
 You can arrange the questions in a quiz into several <strong>pages</strong>
 or you can keep them all on one page. As you create the questions, and add them
-to the quiz, you also set up the rules for how the questions are graded
+to the quiz, you also set up how the questions are graded
 (or marked). This is like the mark-scheme for a traditional quiz.</p>
 
 <p>When you create questions, they are stored in the <strong>question
 bank</strong>. In the question bank you can create <strong>categories</strong>,
-which are similar to folders on your hard disc. You can use them to create a
+which are similar to folders on your computer. You can use them to create a
 hierarchy for organising your questions, for example, by topic. Even if you
-create and add a question directly into the quiz, it is automatically stored in
-the question bank too. If you later remove your question from the quiz, will
-remain in the question bank, unless you also go and delete it from there. As you
-construct your quiz, you can take any  of the questions that are already in the
-question bank, and add them to your quiz.</p>
-
+create and add a question directly into the quiz, a copy is automatically stored in
+the question bank too. </p>
 <p>You can use <strong>random questions</strong> so that different students get
 different questions, or so that one student gets different questions each time
 they attempt the quiz. For example, this can reduce cheating by making it harder
